--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <body>
     <div id="app">
+      <div class="user-button-container"></div>
       <header>
         <h1 id="app-title">🍿 자판기 🍿</h1>
       </header>
